crates/mineral-tui/src/components/layout/shared/snapshots/transport_playing_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/transport.rs
description: "播放栏:播放中(LoveLetterTypewriter,进度条 + 音量)"
expression: t.backend()
---
"╭ transport ─────────────────────────────────────╮"
"│              LoveLetterTypewriter              │"
"│                        ·                       │"
"│ 1:00 ━━━━━━━━━●────────────────────────── 3:45 │"
"│              [⏮]   [⏸]   [⏭]   [→]             │"
"│               p     ␣     n     m              │"
"│ vol ████▊   80%    mode seq              fmt — │"
"╰────────────────────────────────────────────────╯"
