crates/mineral-tui/src/components/layout/shared/snapshots/transport_prefetch_marker_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/transport.rs
description: "播放栏:gapless prefetch 标记(⏭ 右侧 ⇣)"
expression: t.backend()
---
"╭ transport ─────────────────────────────────────╮"
"│              LoveLetterTypewriter              │"
"│                        ·                       │"
"│ 3:40 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━● 3:45 │"
"│              [⏮]   [⏸]   [⏭]⇣  [→]             │"
"│               p     ␣     n     m              │"
"│ vol ████▊   80%    mode seq              fmt — │"
"╰────────────────────────────────────────────────╯"
