crates/mineral-tui/src/components/layout/shared/snapshots/transport_waveform_reveal_midway_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/shared/transport.rs
description: "播放栏:波形入场动画中途(左波形 / 亮边 / 右中线三段共存)"
expression: t.backend()
---
"╭ transport ───────────────────────────────────────────────────╮"
"│                        CrescendoTrack                        │"
"│                               ·                              │"
"│ 1:00 ▁▁▁▁▁▁▂▂▂▂▂▂▃▃▃▃▃▃▃▃▃▄▄▄▄▃▃▃▃▃▃▂▂▂▁▁────────────── 3:45 │"
"│                     [⏮]   [⏸]   [⏭]   [→]                    │"
"│                      p     ␣     n     m                     │"
"│ vol ████████▊    80%      mode seq                     fmt — │"
"╰──────────────────────────────────────────────────────────────╯"
